--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="row">
             <div class="col-md-12">
               <img src="img/main.jpg" alt="photo">
-              <p><a href='https://www.pac.by/' data-hover='АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ' style="color:#BBBBBB">АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ</a></p>
+              <p><a href="https://www.pac.by/" data-hover="АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ" style="color:#BBBBBB"> АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ</a></p>
               <p class="main_page_uir">УПРАВЛЕНИЕ ИНФОРМАЦИОННЫМИ РЕСУРСАМИ</p>
                 <span class="col-md-12 big_title">Получи современное образование в сфере управления IT</span>
               </div>
@@ -118,34 +118,34 @@
         <div class="row materials_title">
           <div class="col-md-12">
               <p class="title">Наши студенты изучают:</p>
+            </div>
+          </div>
+          <div class="all_mat">
+          <div class="row">
+            <div class="col-md-12">
+              <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s">WEB-дизайн и компьютерная графика</p>
+              <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s">WEB-программирование</p>
+              <p class="pharagraph wow slideInRight" data-wow-duration="2s">Алгоритмизация и программирование</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 mat2">
+              <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Информационные технологии в бизнесе</p>
+              <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Информационные ресурсы</p>
+              <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Информационный менеджмент</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 mat3">
+            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Моделирование управленческих решений</p>
+              <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Операционные системы и компьютерные сети</p>
+              <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Управление IT-проектами</p>
+            </div>
+          </div>
           </div>
         </div>
-        <div class="all_mat">
-        <div class="row">
-          <div class="col-md-12">
-            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s">WEB-дизайн и компьютерная графика</p>
-            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s">WEB-программирование</p>
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s">Алгоритмизация и программирование</p>
-          </div>
         </div>
-        <div class="row">
-          <div class="col-md-12 mat2">
-            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Информационные технологии в бизнесе</p>
-            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Информационные ресурсы</p>
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Информационный менеджмент</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 mat3">
-          <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Моделирование управленческих решений</p>
-            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Операционные системы и компьютерные сети</p>
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Управление IT-проектами</p>
-          </div>
-        </div>
-        </div>
-      </div>
-      </div>
-    </section>
+      </section>
 
 
     <section class="counter">
@@ -202,54 +202,54 @@
           <div class="all_sp_texts">
             <div class="row">
               <div class="col-md-12">
-                <p class="pharagraph sp_text">— Инженер-программисты</p>
+                <p class="pharagraph sp_text wow jackInTheBox" data-wow-offset="25">— Инженеры-программисты</p>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
-                <p class="pharagraph sp_text">— Бизнес-аналитики</p>
+                <p class="pharagraph sp_text wow jackInTheBox" data-wow-offset="25">— Бизнес-аналитики</p>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
-                <p class="pharagraph sp_text">— Другие</p>
+                <p class="pharagraph sp_text wow jackInTheBox" data-wow-offset="25">— Другие</p>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
-                <p class="pharagraph sp_text">— QA Engineers</p>
+                <p class="pharagraph sp_text wow jackInTheBox" data-wow-offset="25">— QA Engineers</p>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
-                <p class="pharagraph sp_text">— Экономисты</p>
+                <p class="pharagraph sp_text wow jackInTheBox" data-wow-offset="25">— Экономисты</p>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
-                <p class="pharagraph sp_text">— Менеджеры</p>
+                <p class="pharagraph sp_text wow jackInTheBox" data-wow-offset="25">— Менеджеры</p>
               </div>
             </div>
           </div>
           </div>
           <div class="row percent width_sp justify-content-between d-flex">
             <div class="col-md-1">
-              <p class="pharagraph sp_text">37%</p>
+              <p class="pharagraph num_text">37%</p>
             </div>
             <div class="col-md-1">
-              <p class="pharagraph sp_text">17%</p>
+              <p class="pharagraph num_text">17%</p>
             </div>
             <div class="col-md-1">
-              <p class="pharagraph sp_text">15%</p>
+              <p class="pharagraph num_text">15%</p>
             </div>
             <div class="col-md-1">
-              <p class="pharagraph sp_text">12%</p>
+              <p class="pharagraph num_text">12%</p>
             </div>
             <div class="col-md-1">
-              <p class="pharagraph sp_text">10%</p>
+              <p class="pharagraph num_text">10%</p>
             </div>
             <div class="col-md-1">
-              <p class="pharagraph sp_text">9%</p>
+              <p class="pharagraph num_text">9%</p>
             </div>
           </div>
         </div>
@@ -266,35 +266,35 @@
         </div>
         <div class="row justify-content-between d-flex">
           <div class="col-md-4">
-            <a class="epam"><img src="img/epam_st.png"></a>
+        <img src="img/epam_st.png" id="epam">
           </div>
           <div class="col-md-4">
-            <img src="img/bps_st.png">
+            <img src="img/bps_st.png" id="bps">
           </div>
           <div class="col-md-4">
-            <img src="img/borovoi_st.png">
-          </div>
-        </div>
-        <div class="row companies_top justify-content-between d-flex">
-          <div class="col-md-4">
-            <img src="img/itechart_st.png">
-          </div>
-          <div class="col-md-4">
-            <img src="img/itransition_st.png">
-          </div>
-          <div class="col-md-4">
-            <img src="img/ey_st.png">
+            <img src="img/borovoi_st.png" id="borovoi">
           </div>
         </div>
         <div class="row companies_top justify-content-between d-flex">
           <div class="col-md-4">
-            <img src="img/iba_st.png">
+            <img src="img/itechart_st.png" id="itechart">
           </div>
           <div class="col-md-4">
-            <img src="img/bel_st.png">
+            <img src="img/itransition_st.png" id="itransition">
           </div>
           <div class="col-md-4">
-            <img src="img/business_st.png">
+            <img src="img/ey_st.png" id="ey">
+          </div>
+        </div>
+        <div class="row companies_top justify-content-between d-flex">
+          <div class="col-md-4">
+            <img src="img/iba_st.png" id="iba">
+          </div>
+          <div class="col-md-4">
+            <img src="img/bel_st.png" id="bel">
+          </div>
+          <div class="col-md-4">
+            <img src="img/business_st.png" id="bus">
           </div>
         </div>
       </div>
@@ -327,7 +327,8 @@
               new WOW().init();
               </script>
               <script src="https://yastatic.net/jquery/3.1.0/jquery.min.js"></script>
-              <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.1.0.min.js"></script>')</script>
+            <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.1.0.min.js"></script>')</script>-->
+            <!--  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.1.0.min.js"></script>')</script>-->
               <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
